# xml_writer

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md  Xml_writer_svg_extension.h  example01.cpp  example02.cpp  example03.cpp  example04.cpp
include/: Variadic_tools.h  Xml_writer.h  Xml_writer_basic_extensions.h  Xml_writer_internals.h
