function(make_example_id output num)
	string(LENGTH "${num}" _strlen)
	if (_strlen GREATER 1)
		set(${output} "${num}" PARENT_SCOPE)
	else()
		set(${output} "0${num}" PARENT_SCOPE)
	endif()
endfunction()

foreach(exampleNum 1 4)
	make_example_id(exampleId ${exampleNum})
	add_executable(aka_example${exampleId} example${exampleId}.cpp)
	target_link_libraries(aka_example${exampleId} aka_xml_writer)
endforeach()
